--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,10 @@ jobs:
   code-analysis:
     runs-on: ubuntu-latest
     needs: unit-test
+
+    environment: #Define a configuração de ambiente para este job
+      name: SONAR 
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -51,8 +55,12 @@ jobs:
       - name: Run SonarQube analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar -Dsonar.projectKey=marceloebert_Fastfood-Microservico-Production-API -Dsonar.organization=marceloebert -Dsonar.token=$SONAR_TOKEN
-
+        run: |
+          ./gradlew sonar \
+            -Dsonar.host.url="https://sonarcloud.io" \
+            -Dsonar.organization="marceloebert" \
+            -Dsonar.projectKey="marceloebert_Fastfood-Microservico-Production-API" \
+            -Dsonar.token="${{ secrets.SONAR_TOKEN }}
   build:
     runs-on: ubuntu-latest
     needs: [unit-test, code-analysis]
