--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,10 +57,10 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           ./gradlew sonar \
-            -Dsonar.host.url="https://sonarcloud.io" \
-            -Dsonar.organization="marceloebert" \
-            -Dsonar.projectKey="marceloebert_Fastfood-Microservico-Production-API" \
-            -Dsonar.token="${{ secrets.SONAR_TOKEN }}
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.organization=marceloebert \
+            -Dsonar.projectKey=marceloebert_Fastfood-Microservico-Production-API \
+            -Dsonar.token=$SONAR_TOKEN
   build:
     runs-on: ubuntu-latest
     needs: [unit-test, code-analysis]
